--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       dockerfile: Dockerfile
     environment:
       USER_CODE_PATH: /home/src/base_project
+      REQUIRE_USER_AUTHENTICATION: 1
     #  ENV: ${ENV}
     ports:
       - 6789:6789
